--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
         <li class="nav__item ">
           <a class="nav__link--resetStyle" href="#offer">Oferta</a>
         </li>
-        <li class="nav__item" id="yoga">
+        <li class="nav__item">
           <a class="nav__link--resetStyle" href="#yoga">Joga</a>
         </li>
-        <li class="nav__item" id="creativeWorkshops">
+        <li class="nav__item">
           <a class="nav__link--resetStyle" href="#creativeWorkshops"
             >Warsztaty Kreatywności</a
           >
         </li>
-        <li class="nav__item nav__item--resetMargin" id="contact">
+        <li class="nav__item nav__item--resetMargin">
           <a class="nav__link--resetStyle" href="#footer"> Kontakt</a>
         </li>
       </ul>
@@ -185,7 +185,7 @@
           </div>
           <img class="yoga__img" src="icons/whiteLeaf.svg" alt="biały liść">
             </section>
-            <section id="#creativeWorkshops" class="creativeWorkshops">
+            <section id="creativeWorkshops" class="creativeWorkshops">
               <h2 class="creativeWorkshops__header">Warsztaty kreatywności
                 dla kobiet</h2>
                 <p class="creativeWorkshops__paragraph">Zapraszam na wyjątkowe zajęcia w kręgu kobiet. Co tydzień zasiadamy w kręgu, rozmawiamy, medytujemy, ćwiczymy jogę, oddychamy. Słuchamy siebie i innych. Odpoczywamy. <span class="creativeWorkshops__paragraph--underline">Udział w spotkaniu jest darmowy, zasady naszych spotkań:</span></p>
