--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         
             <section id="offer" class="offer animation">
               <h2 class="offer__head">Oferta</h2>
-              <p  class="offer__paragraph">
+              <!-- <p  class="offer__paragraph">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
                 cursus quis nisi id placerat. Mauris in tempus sem. Pellentesque
-                quis est vitae justo scelerisque porta a in augue.
+                quis est vitae justo scelerisque porta a in augue. -->
               </p>
               <div class="offer__container">
                 <img class="offer__icon" src="icons/colorLeaf.svg" />
@@ -92,11 +92,11 @@
             </section>
   <section id="yoga" class="yoga">
           <h2 class="yoga__head">Joga</h2>
-          <p class="yoga__paragraph">
+          <!-- <p class="yoga__paragraph">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
             cursus quis nisi id placerat. Mauris in tempus sem. Pellentesque
             quis est vitae justo scelerisque porta a in augue.
-          </p>
+          </p> -->
           <div class="yoga__yogaFlexContainer">
 
           <div class="yoga__container yoga__container--addMargin">
@@ -206,7 +206,7 @@
               </section>
               <section class="priceList">
                 <h2 class="priceList__header">Cennik</h2>
-                <p class="priceList__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas cursus quis nisi id placerat. Mauris in tempus sem. Pellentesque quis est vitae justo scelerisque porta a in augue.</p>
+                <!-- <p class="priceList__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas cursus quis nisi id placerat. Mauris in tempus sem. Pellentesque quis est vitae justo scelerisque porta a in augue.</p> -->
                 <div class="priceList__flexboxContainer">
                   <div class="priceList__box">
                     <h3 class="priceList__box-header">Pojedyńcze
@@ -240,7 +240,7 @@
         <footer id="footer" class="footer">
             <div class="footer__item">
               <img src="icons/elaWithTheFlowBottomLogo.svg" alt="logo Ela with the Flow">
-              <span class="footer__span">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas cursus quis nisi id placerat. Mauris in tempus sem. Pellentesque quis est vitae justo scelerisque porta a in augue. Suspendisse placerat ornare sapien ut dignissim. Suspendisse ullamcorper arcu id eleifend vulputate.</span>
+              <!-- <span class="footer__span">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas cursus quis nisi id placerat. Mauris in tempus sem. Pellentesque quis est vitae justo scelerisque porta a in augue. Suspendisse placerat ornare sapien ut dignissim. Suspendisse ullamcorper arcu id eleifend vulputate.</span> -->
             </div>
             <div class="footer__item">
               <h3 class="footer__header">Współpraca</h3>
